@@ -1,6 +1,11 @@
 2017-10-03 Riccardo Mottola <rm@gnu.org>
 
 	* DBHTMLWriter.m
+	Handle some HTML escaping.
+
+2017-10-03 Riccardo Mottola <rm@gnu.org>
+
+	* DBHTMLWriter.m
 	Handle also unordered writing in HTML output.
 
 2017-10-03 Riccardo Mottola <rm@gnu.org>
